--- a/XO/Info.plist
+++ b/XO/Info.plist
@@ -7,7 +7,9 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>UIApplicationSceneManifest</key>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
+	<key>Application Scene Manifest1</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
